refactor: refactor func implementation
